examples/test/testpolicy15108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15108
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key12: value11
      key36: value39
      key9: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value25
          key33: value45
          key34: value41
